[package]
name = "minidisc"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/G2-Games/minidisc-rs/"
repository = "https://github.com/G2-Games/minidisc-rs/"
documentation = "https://docs.rs/cross_usb"
description = "A library for interacting with NetMD and Hi-MD minidisc devices."
license = "AGPL-3.0"
authors = ["G2 <ke0bhogsg@gmail.com>", "Asivery"]
readme = "README.md"

keywords = ["minidisc"]
categories = ["hardware-support", "wasm", "multimedia::audio"]

# Have docs.rs make documentation for most supported targets
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "aarch64-pc-windows-msvc", "x86_64-apple-darwin", "aarch64-apple-darwin", "wasm32-unknown-unknown"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
diacritics = "0.2.0"
encoding_rs = "0.8.33"
nofmt = "1.0.0"
once_cell = "1.18.0"
unicode-normalization = "0.1.22"
regex = "1.10.2"
lazy_static = "1.4.0"
cross_usb = "0.3"
num-derive = "0.3.3"
num-traits = "0.2.14"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
des = "0.8"
cbc = "0.1"
ecb = "0.1"
tokio = { version = "1.36", features = ["sync"] }
g2-unicode-jp = "0.4.1"
thiserror = "1.0.57"

[target.'cfg(target_family = "wasm")'.dependencies]
gloo = { version = "0.11.0", features = ["futures"] }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
