[package]
name = "minidisc"
version = "0.1.3"
edition = "2024"
homepage = "https://github.com/G2-Games/minidisc-rs/"
repository = "https://github.com/G2-Games/minidisc-rs/"
documentation = "https://docs.rs/cross_usb"
description = "A library for interacting with NetMD and Hi-MD minidisc devices."
license = "MIT OR Apache-2.0"
authors = ["G2 <ke0bhogsg@gmail.com>", "Asivery"]
readme = "README.md"

keywords = ["minidisc", "netmd", "net-md", "hi-md", "sony"]
categories = ["hardware-support", "wasm", "multimedia::audio"]

# Have docs.rs make documentation for most supported targets
[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "wasm32-unknown-unknown"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
tokio-test = "0.4"

[dependencies]
diacritics = "0.2"
encoding_rs = "0.8"
nofmt = "1.0"
unicode-normalization = "0.1"
regex = "1.11"
cross_usb = "0.4"
num-derive = "0.4"
num-traits = "0.2"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
des = "0.8"
cbc = "0.1"
ecb = "0.1"
tokio = { version = "1.36", features = ["sync"] }
g2-unicode-jp = "0.4"
thiserror = "2.0"
phf = { version = "0.12", features = ["phf_macros", "macros"] }
byteorder = "1.5"
log = "0.4"

[target.'cfg(target_family = "wasm")'.dependencies]
gloo = { version = "0.11.0", features = ["futures", "worker"] }
futures = "0.3"
