[package]
name = "minidisc-rs"
version = "0.0.1"
homepage = "https://github.com/G2-Games/minidisc-cli/"
repository = "https://github.com/G2-Games/minidisc-cli/minidisc-rs/"
description = "An interface in rust to control NetMD and Hi-MD minidisc devices."
license-file = "LICENSE"
authors = ["G2 <g2@g2games.dev>"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.33"
nofmt = "1.0.0"
once_cell = "1.18.0"
rusb = "0.9.3"

