[package]
name = "minidisc-rs"
version = "0.0.1"
homepage = "https://github.com/G2-Games/minidisc-cli/"
repository = "https://github.com/G2-Games/minidisc-cli/minidisc-rs/"
description = "An interface in rust to control NetMD and Hi-MD minidisc devices."
license-file = "LICENSE"
authors = ["G2 <g2@g2games.dev>"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diacritics = "0.2.0"
encoding_rs = "0.8.33"
magic-crypt = "3.1.12"
nofmt = "1.0.0"
once_cell = "1.18.0"
unicode-normalization = "0.1.22"
hex = "0.4.3"
unicode-jp = "0.4.0"
regex = "1.10.2"
lazy_static = "1.4.0"
nusb = "0.1.4"
num-derive = "0.3.3"
num-traits = "0.2.14"
rand = "0.8.5"

[lib]
crate-type = ["cdylib", "rlib"]
